fresh-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2024-12-01T10:44:55Z"
  labels:
    app: freshrss
  name: freshrss
spec:
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http-entrypoint
      port: 80
      targetPort: 80
  selector:
    app: freshrss
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  labels:
    app: freshrss
spec:
  replicas: 2
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      containers:
        - args:
            - /bin/bash
            - -o
            - pipefail
            - -c
            - "([ -z \"$CRON_MIN\" ] || cron) && . /etc/apache2/envvars && exec apache2
              -D FOREGROUND $([ -n \"$OIDC_ENABLED\" ] && [ \"$OIDC_ENABLED\" -ne
              0 ] && echo '-D OIDC_ENABLED')"
          image: ghcr.io/veechiecooqu/freshrss-kustomize:main
          name: freshrss
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/FreshRSS/extensions
              name: freshrss-extensions-pvc
            - mountPath: /var/www/FreshRSS/data
              name: freshrss-data-pvc
            - mountPath: /etc/php/8.2/apache2/conf.d/20-memcached.ini
              name: ini-config
              subPath: 20-memcached.ini
      volumes:
        - name: freshrss-extensions-pvc
          persistentVolumeClaim:
            claimName: freshrss-extensions
        - name: freshrss-data-pvc
          persistentVolumeClaim:
            claimName: freshrss-data
        - name: ini-config
          configMap:
            name: php-ini-config
            # items:
            #   - key: 20-memcached.ini
            #     path: 20-memcached.ini
