httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: freshrss-httproute
spec:
  parentRefs:
    - name: traefik-websecure
  hostnames:
    - BASE_URL
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /freshrss
        - path:
            type: PathPrefix
            value: /freshrss/
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: strip-prefix
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: browserXssFilter
                value: 'true'
              - name: forceSTSHeader
                value: 'true'
              - name: frameDeny
                value: 'true'
              - name: referrerPolicy
                value: no-referrer-when-downgrade
              - name: stsSeconds
                value: '31536000'
      # - type: URLRewrite
      #   urlRewrite:
      #     path:
      #       type: ReplacePrefixMatch
      #       replacePrefixMatch: '/'
      backendRefs:
        - name: freshrss
          port: 80
